Updates to Section 2.

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
 		  <li>Relative to a Latin uppercase letter, should the height of Ethiopic letters: a) equal (b) shorter (c) taller?</li>
 		  <li>Is height alignment an issue with other writing systems?  If so, how is it addressed?</li>
 		</em></ol>
+		</p>
     </section>
 
     <section id="relative_typeface_weights">
@@ -154,12 +155,13 @@ and in some cases limitations imposed by desktop publishing software designed fo
 		  <li>When publishing in the classical Ethiopic weight, should English words appear in their default English weight?</li>
 		  <li>If heavier Latin letters are desirable, how much so? Can a weight increase be defined as a percentage of the Ethiopic?</li>
 		</em></ol>
+		</p>
     </section>
 
     <section id="baseline_alignment">
         <h4>Baseline Alignment</h4>
         <p><em>This may only be an issue with pre-digital typesetting systems where Latin text and Ethiopic would appear to be
-        use different baselines in a line of text.  The most common example of this appears from documents produced with a typewriter
+        use different baselines in a line of text.  The most common example of this appears in documents produced with a typewriter
         where a sheet of paper had to be moved between typewriters to produce a line in two scripts.  An apparent baseline difference here
         would be the result of mechanical misalignment.</em></p>
     </section>
@@ -171,13 +173,24 @@ and in some cases limitations imposed by desktop publishing software designed fo
 
     <section id="ethiopicized_punctuation">
         <h4>Ethiopicized Punctuation</h4>
-    </section>
+        <p>Modern Ethiopic borrows a number of foreign symbols to denote currency, express emphasis, time, mathematics, or communicate with
+        Interenet protocols (e.g. "@" , "://" ).  The shape and weight of these symbols are often changed for a better visual fit with an accompanying
+        Ethiopic typeface. Enhanced foreign symbols are referred to here as "Ethiopicized". While many symbols are borrowed from western writing,
+        not all are necessarily benefit from Ethiopicization.  Those that do will primarily be used in a context where the foreign symbol directly
+        abuts some Ethiopic symbol.</p>
 
-    <section id="latin_punctuation_inventory">
-        <h4>Latin Punctuation Inventory</h4>
-    	<p><em>as per ES-781:2002</em></p>
-    	<code>1234567890 ? ! ¡ . / () [] {} &lt; = &gt; \ # % &amp; _ - + ± × ÷ ‘ ’  “ ” ‹ › « »</code><br/>
-    	Common punctuation that is missing from the standard: <code>$ : , € @ …</code> (colon used in time)
+    	<p>The ES-781:2002 standard identifies the following inventory of western symbols to be used with Ethiopic:</p>
+    	<p style="margin-left: 20px"><code>1234567890 ? ! ¡ . / () [] {} &lt; = &gt; \ # % &amp; _ - + ± × ÷ ‘ ’  “ ” ‹ › « »</code></p>
+    	<p>Additionally the following punctuation that is observed to be used with Ethiopic writing:</p>
+    	<p style="margin-left: 20px"><code>$ : , € @ …</code></p>
+        <p><em>Issues:</em>
+		<ol><em>
+		  <li>Are there any additional western symbols required for Ethiopic writing?</li>
+		  <li>Are any symbols from other foreign script (Chinese, Arabic, etc) that should be included?</li>
+		  <li>What symbols benefit from shape change?</li>
+		  <li>What symbols benefit from weight change?</li>
+		</em></ol>
+		</p>    	
     </section>
 
     <section id="optical_balancing">
@@ -187,7 +200,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
     
     <section id="ethiopic_wordspace_at_latin_boundaries">
     	<h4>Ethiopic Wordspace at Latin Boundaries</h4>
-    	<p><em>letter or punctuation boundary, Consider example of wordspace follow an abbreviation which is terminated with a dot.</em></p>
+    	<p><em>letter or punctuation boundary, Consider example of wordspace following an abbreviation which is terminated with a dot.</em></p>
     </section>
     
     <section id="space_wordspace_substitution rules">
