Updates to sections on letter heights.

--- a/index.html
+++ b/index.html
@@ -131,11 +131,47 @@ and in some cases limitations imposed by desktop publishing software designed fo
         The difference is likely an artifact of the typesetting technology in use and does not represent the intent of the author or publisher.
         In the classic typeface style of Ethiopic script the letters will be of variable heights. Fixed height styles are more generally used for
         advertisement and not publishing. The nature of variable height Ethiopic letters is a factor that complicates how to be best align letter height with a foreign script.</p>
+        <p>
+        <figure id="inline_list_with_spaces">
+          <img src="images/English-Ethiopic-Relative-Heights.png" border="1"/>
+          <figcaption>Comparative heights of English and Ethiopic script.</figcaption>
+        </figure>
+        </p>
+        <p>
+        <figure id="inline_list_with_spaces">
+          <img src="images/Z-Reference-Monotype.png" border="1"/>
+          <figcaption>Comparative letter heights.</figcaption>
+        </figure>
+        </p>
+        <p>
+        <figure id="inline_list_with_spaces">
+          <img src="images/Z-Reference-Abyssinica.png" border="1"/>
+          <figcaption>Comparative letter heights change with typeface.</figcaption>
+        </figure>
+        </p>
+        <p>
+        <figure id="inline_list_with_spaces">
+          <img src="images/Z-Ny-N-Top-Aligned.png" border="1"/>
+          <figcaption>Alignment and top of symbols (Ethiopic letters too squat).</figcaption>
+        </figure>
+        </p>
+        <p>
+        <figure id="inline_list_with_spaces">
+          <img src="images/Z-caron-Ny-Z-N-Alignment.png" border="1"/>
+          <figcaption>Alignment below accent (better sizing).</figcaption>
+        </figure>
+        </p>
+        <p>
+        <figure id="inline_list_with_spaces">
+          <img src="images/Z-N-Alignment.png" border="1"/>
+          <figcaption>Z-ን Reference Alignment.</figcaption>
+        </figure>
+        </p>
         <p><em>Issues:</em>
 		<ol><em>
 		  <li>What Ethiopic letter should be applied as a height reference point for alignment?</li>
 		  <li>Should height alignment be attempted as per the letter inventory of a target language level or for the script as a whole (practical but less optimal)?</li>
-		  <li>Relative to a Latin uppercase letter, should the height of Ethiopic letters: a) equal (b) shorter (c) taller?</li>
+		  <li>Relative to a Latin uppercase letter, should the height of Ethiopic letters: (a) equal (b) shorter (c) taller?</li>
 		  <li>Is height alignment an issue with other writing systems?  If so, how is it addressed?</li>
 		</em></ol>
 		</p>
@@ -161,7 +197,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
     <section id="baseline_alignment">
         <h4>Baseline Alignment</h4>
         <p><em>This may only be an issue with pre-digital typesetting systems where Latin text and Ethiopic would appear to be
-        use different baselines in a line of text.  The most common example of this appears in documents produced with a typewriter
+        laid out on different baselines in a line of text.  The most common example of this appears in documents produced with a typewriter
         where a sheet of paper had to be moved between typewriters to produce a line in two scripts.  An apparent baseline difference here
         would be the result of mechanical misalignment.</em></p>
     </section>
@@ -424,7 +460,18 @@ and in some cases limitations imposed by desktop publishing software designed fo
     <section id="inline_lists">
     <h4>Inline Lists</h4>
     <p><em>How much space after marker? Is the space after marker the different when Ethiopic wordspace is in use?</em></p>
-    <p><img src="images/inline-list.png" border="1"/><br/>[Update image to show with and without wordspace]</p>
+    <p>
+    <figure id="inline_list_with_wordspaces">
+      <img src="images/inline-list-with-wordspace.png" border="1"/>
+      <figcaption>Ethiopic inline list sample using wordspaces with 3 spacings (none, thin, and hair) following list marker.</figcaption>
+    </figure>
+    </p>
+    <p>
+    <figure id="inline_list_with_spaces">
+      <img src="images/inline-list-with-space.png" border="1"/>
+      <figcaption>Ethiopic inline list sample using spaces with 3 spacings (none, thin, and hair) following list marker.</figcaption>
+    </figure>
+    </p>
     </section>
     
     <section id="numbered_lists">
