Comparative bullet size images added.

--- a/index.html
+++ b/index.html
@@ -397,11 +397,31 @@ and in some cases limitations imposed by desktop publishing software designed fo
     	<p>Bullet lists are utilized regularly in Ethiopic literature. Authors using a computer or typewriter will work with the list marker
     	symbols made available by their software or machine. Many marker, or "bullet", symbols are accepted for Ethiopic literature though not all
     	will be considered optimal.</p>
+        <p>
+        <figure id="inline_list_with_spaces">
+          <img src="images/circle-bullet-size-samples.png" border="1"/>
+          <figcaption>Circle bullet size relative to letter height.</figcaption>
+        </figure>
+        </p>
+        <p>
+        <figure id="inline_list_with_spaces">
+          <img src="images/square-bullet-size-samples.png" border="1"/>
+          <figcaption>Square bullet size relative to letter height.</figcaption>
+        </figure>
+        </p>
+        <p>
+        <figure id="inline_list_with_spaces">
+          <img src="images/diamond-bullet-size-samples.png" border="1"/>
+          <figcaption>Diamond bullet size relative to letter height.</figcaption>
+        </figure>
+        </p>     	
+    	<p><em>TBD: Expand the size comparisons: 60% 70% 80%. Produce samples with comparative distance of bullets from letters</em></p>
 		<p><em>Issues:</em>
 		<ol><em>
 		  <li>What are the preferred bullet shapes?</li>
 		  <li>What are the preferred shape sequences in nested lists?</li>
-		  <li>What is bullet height and width relative to letter dimensions? [TBD: Create comparative sample images]</li>
+		  <li>What is bullet height and width relative to letter dimensions?</li>
+		  <li>What is the default distance of the list item text from the bullet?</li>
 		  <li>Are lists indented (left  margin)? If so, how much?</li>
 		  <li>Examples are needed for pre-digital, classical, literature.</li>
 
@@ -422,7 +442,6 @@ and in some cases limitations imposed by desktop publishing software designed fo
          <ol>
           <li>What are the preferred list marker symbols? What is the best default?</li>
           <li>How much, if any, white space follows the suffix?</li>
-          <li>TBD: Produce comparative spacing examples using: space, punctuation space (U+2008), thin space (U+2009), hair space (U+200A), etc.</li>
           <li>Do copy editors or publishers set a policy for list item markers, or leave it up to the author to decide?</li>
           <li>Of interest: when are ordered lists first found in Ethiopic writing and in what form?</li>
          </ol>
@@ -463,13 +482,13 @@ and in some cases limitations imposed by desktop publishing software designed fo
     <p>
     <figure id="inline_list_with_wordspaces">
       <img src="images/inline-list-with-wordspace.png" border="1"/>
-      <figcaption>Ethiopic inline list sample using wordspaces with 3 spacings (none, thin, and hair) following list marker.</figcaption>
+      <figcaption>Ethiopic inline list sample using wordspaces with 3 spacings (none, hair and thin) following list marker.</figcaption>
     </figure>
     </p>
     <p>
     <figure id="inline_list_with_spaces">
       <img src="images/inline-list-with-space.png" border="1"/>
-      <figcaption>Ethiopic inline list sample using spaces with 3 spacings (none, thin, and hair) following list marker.</figcaption>
+      <figcaption>Ethiopic inline list sample using spaces with 3 spacings (none, hair and thin) following list marker.</figcaption>
     </figure>
     </p>
     </section>
