Adding Ethiopicized punctuation sample image.

--- a/index.html
+++ b/index.html
@@ -219,6 +219,12 @@ and in some cases limitations imposed by desktop publishing software designed fo
     	<p style="margin-left: 20px"><code>1234567890 ? ! ¡ . / () [] {} &lt; = &gt; \ # % &amp; _ - + ± × ÷ ‘ ’  “ ” ‹ › « »</code></p>
     	<p>Additionally the following punctuation that is observed to be used with Ethiopic writing:</p>
     	<p style="margin-left: 20px"><code>$ : , € @ …</code></p>
+    	<p>
+        <figure id="inline_list_with_spaces">
+          <img src="images/Ethiopicized-Punctuation-Sample-HalfSize.png" border="1"/>
+          <figcaption>Samples of Ethiopicized punctuation compared to shapes in a companion Latin typeface.</figcaption>
+        </figure>
+        </p>
         <p><em>Issues:</em>
 		<ol><em>
 		  <li>Are there any additional western symbols required for Ethiopic writing?</li>
