Updates in sections 1.3, 2.2.1 and 3.7.7

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </section>
       <section id="basic_principles">
       <h3>Basic Principles for Document Development</h3>
-      <p>Growing out of the XX element <a href="#term.geez" class="termref">Ge'ez</a> language syllabary for two millenia, Ethiopic in its present day form is a multilingual, and multinational, script comprised by YY symbols reprsenting: syllables, numerals, punctuation and tonal marks.  Numerous linguistic, cultural, literary, historical and political issues surround the script and its utilization, all of which the authors strive to avoid discussing unless directly relevant to clarifying a given layout use case. The following principles are applied in the development of this document:</p>
+      <p>Growing out of the 182 element <a href="#term.geez" class="termref">Ge'ez</a> language syllabary for two millenia, Ethiopic in its present day form is a multilingual, and multinational, script comprised by 494 symbols reprsenting: syllables, numerals, punctuation and tonal marks.  Numerous linguistic, cultural, literary, historical and political issues surround the script and its utilization, all of which the authors strive to avoid discussing unless directly relevant to clarifying a given layout use case. The following principles are applied in the development of this document:</p>
       <ol>
         <li>View publishers as the primary stakeholders.</li>
         <li>Attempt a "90% solution" where the common and primary needs of publishers are addressed. Important but less widely used practices such as for <a href="#term.yared-zaima" class="termref">Yaredic Zaima Notation</a> will be addressed at a future time.</li> 
@@ -164,7 +164,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
         <p>
         <figure id="inline_list_with_spaces">
           <img src="images/Z-N-Alignment.png" border="1"/>
-          <figcaption>Z-ን Reference Alignment.</figcaption>
+          <figcaption>Z-ን or "Zen" Reference Alignment.</figcaption>
         </figure>
         </p>
         <p><em>Issues:</em>
@@ -210,15 +210,18 @@ and in some cases limitations imposed by desktop publishing software designed fo
     <section id="ethiopicized_punctuation">
         <h4>Ethiopicized Punctuation</h4>
         <p>Modern Ethiopic borrows a number of foreign symbols to denote currency, express emphasis, time, mathematics, or communicate with
-        Interenet protocols (e.g. "@" , "://" ).  The shape and weight of these symbols are often changed for a better visual fit with an accompanying
-        Ethiopic typeface. Enhanced foreign symbols are referred to here as "Ethiopicized". While many symbols are borrowed from western writing,
-        not all are necessarily benefit from Ethiopicization.  Those that do will primarily be used in a context where the foreign symbol directly
-        abuts some Ethiopic symbol.</p>
-
-    	<p>The ES-781:2002 standard identifies the following inventory of western symbols to be used with Ethiopic:</p>
+        Interenet protocols (e.g. "@" , "://" ).  
+    	The ES-781:2002 standard identifies the following inventory of western symbols to be used with Ethiopic:</p>
     	<p style="margin-left: 20px"><code>1234567890 ? ! ¡ . / () [] {} &lt; = &gt; \ # % &amp; _ - + ± × ÷ ‘ ’  “ ” ‹ › « »</code></p>
-    	<p>Additionally the following punctuation that is observed to be used with Ethiopic writing:</p>
+    	<p>Additionally the following punctuation is observed to be used with Ethiopic writing:</p>
     	<p style="margin-left: 20px"><code>$ : , € @ …</code></p>
+
+
+The shape and weight of these symbols are often changed for a better visual fit with an accompanying
+        Ethiopic typeface. Enhanced foreign symbols are referred to here as "Ethiopicized". While many symbols are borrowed from western writing,
+        not all necessarily benefit from Ethiopicization.  Those that do will primarily be used in a context where the foreign symbol directly
+        abuts some Ethiopic symbol. Commonly Ethiopic symbols are demonstrated in the following figure:</p>
+
     	<p>
         <figure id="inline_list_with_spaces">
           <img src="images/Ethiopicized-Punctuation-Sample-HalfSize.png" border="1"/>
@@ -801,7 +804,10 @@ and in some cases limitations imposed by desktop publishing software designed fo
     
     <section id="አበገደ_lists">
     	<h4>አበገደ Lists</h4>
-    	<p><em>brief background on the አበገደ order</em></p>
+        <p>The አበገደ ordering of the Ethiopic syllabary is an alignment with the Coptic and Greek alphabets possibly to
+        fascilitate interdenominational communication or for the transfer of gematria practices.
+        The ordering is used today largely for pedagogical purposes and has been used by some authors for the collation of
+        entire works such as dictionaries. More often authors will apply the ordering for list orders.</p>
     	<p>The አበገደ ordering is potentially desirable to any language using the Ethiopic syllabary.
     	The ordering is less likely to be found in the writing traditions of languages that have a written tradition of under a hundred years.
     	The language specific orders orders shown here are those found in utilization in corpus (<em>give references</em>.</p>
