Typo fix and remark text added to the Word Boundaries section.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </section>
       <section id="basic_principles">
       <h3>Basic Principles for Document Development</h3>
-      <p>Growing out of the 182 element <a href="#term.geez" class="termref">Ge'ez</a> language syllabary for two millenia, Ethiopic in its present day form is a multilingual, and multinational, script comprised by 494 symbols reprsenting: syllables, numerals, punctuation and tonal marks.  Numerous linguistic, cultural, literary, historical and political issues surround the script and its utilization, all of which the authors strive to avoid discussing unless directly relevant to clarifying a given layout use case. The following principles are applied in the development of this document:</p>
+      <p>Growing out of the 182 element <a href="#term.geez" class="termref">Ge'ez</a> language syllabary for two millenia, Ethiopic in its present day form is a multilingual, and multinational, script comprised by 494 symbols representing: syllables, numerals, punctuation and tonal marks.  Numerous linguistic, cultural, literary, historical and political issues surround the script and its utilization, all of which the authors strive to avoid discussing unless directly relevant to clarifying a given layout use case. The following principles are applied in the development of this document:</p>
       <ol>
         <li>View publishers as the primary stakeholders.</li>
         <li>Attempt a "90% solution" where the common and primary needs of publishers are addressed. Important but less widely used practices such as for <a href="#term.yared-zaima" class="termref">Yaredic Zaima Notation</a> will be addressed at a future time.</li> 
@@ -304,6 +304,9 @@ The shape and weight of these symbols are often changed for a better visual fit 
       </section>
       <section id="ethiopic_word_boundaries">
       	<h3>Word Boundaries</h3>
+        <p><em>Regular rules apply?  One consideration for Ethiopic would be that a newline is not a dependable word boundary
+        in the common case where words are split across lines without a hyphen symbol and white space is the default wordspace.
+       Word boundaries are known here only by context.</em></p>
       </section>
       <section id="ethiopic_line_breaking">
      	 <h3>Line Breaking</h3>
