--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
         <p>A common practice in Ethiopic literature is the change of typeface weight in one script to appear more visually similar to the other.
         Most typically a Latin typeface will be made heavier to better match its Ethiopic counterpart.  This weight increase is demonstrated in many
         Ethiopic fonts that include the Latin letters. The font designer may have increased the weight of the Latin range primarily to provide heavier
-        weight punctuation to use with Ethiopic script (see <a href="#ethiopicized_punctuation">Ethiopized Punctuation</a>).</p>
+        weight punctuation to use with Ethiopic script (see <a href="#ethiopicized_punctuation">Ethiopicized Punctuation</a>).</p>
         <p>Literature produced with a heavier Latin tyepface may represent the author's stylistic sensibilities but in some cases may be only be a
         pragmatic outcome when an author finds manually changing between fonts too burdensome. 
         The view of professional publishers is unknown here and should be determined.</p>
