adding an universal "following" rule for Ethiopic wordspace after punctuation.

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ The shape and weight of these symbols are often changed for a better visual fit 
       	<dl>
           <dt>Always</dt>
           <dd>An Ethiopic word ends with either a wordspace or punctuation. This rule allows a word to split across lines without the need for a hyphenation symbol.
-          Ethiopic wordspace does not precede another punctuation, with the possible exception of a right-side enclosing symbol (brackets and quotation).
+          Ethiopic wordspace does not precede or follow another punctuation, with the possible exception of a right-side enclosing symbol (brackets and quotation).
           </dd>
       	  <dt>Right-Side Enclosing Symbol Convention 1</dt>
       	  <dd>Ethiopic wordspace does not precede but does follow a right-side enclosing symbol. This appears to be the most commonly used convention during imperial times.</dd>
