HTML bug fix, note on KWK and DTW recognition of two commas.

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ The shape and weight of these symbols are often changed for a better visual fit 
 
      	 <section id="ethiopic_wordspace_punctuation_boundary_rules">	
      		<h4>Rules of Formatting the Ethiopic Wordspace-Punctuation Boundary</h4>
-     		<p><em>This section has become redundant and should be combined with <a href="#ethiopic_wordspace_at_latin_boundaries">Ethiopic Wordspace at Latin Boundaries</a></p>
+     		<p><em>This section has become redundant and should be combined with <a href="#ethiopic_wordspace_at_latin_boundaries">Ethiopic Wordspace at Latin Boundaries</a></em></p>
      	 </section>
       
      	 <section id="ethiopic_whitespace_rules">	
@@ -1220,7 +1220,7 @@ The shape and weight of these symbols are often changed for a better visual fit 
       	  comma glyph by some modern writers writing in other languages. ፥ is the default comma in most Amharic bibles, likely in keeping with
       	  the Ge'ez Bible that the Amharic would have been translated from.  Some modern Bible translations into Amharic, as well as other religious
       	  literature, will use ፣ as the default comma in prose but maintain ፥ for passage references, e.g. ማቴ4፥23 , ዮሐ13፥16 , etc. Given this
-      	  common usage in religious materials "ecclesiastical comma" is a practical English term for referring to the ፥ glyph variant.
+      	  common usage in religious materials "ecclesiastical comma" is a practical English term for referring to the ፥ glyph variant.  Kidane Wolde Kifle and Desta Tekle Wolde note the equivalence of the two commas.
       	  </dd>
       	  <dt>፡ - ንዑስ ነጥብ</dt>
       	  <dd>ETHIOPIC WORDSPACE (አማ/ ሁለት ነጥብ, ትግ/ ክልተ ነጥቢ) in keeping with Ge'ez heritage, is used as word separator (i.e. space) in the classical writing practices
