Updates to the optical balancing section.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
         advertisement and not publishing. The nature of variable height Ethiopic letters is a factor that complicates how to be best align letter height with a foreign script.</p>
         <p>
         <figure id="inline_list_with_spaces">
-          <img src="images/English-Ethiopic-Relative-Heights-2.png" border="1"/>
+          <img src="images/English-Ethiopic-Relative-Heights-3.png" border="1"/>
           <figcaption>Comparative heights of English and Ethiopic script.</figcaption>
         </figure>
         </p>
@@ -241,7 +241,34 @@ The shape and weight of these symbols are often changed for a better visual fit 
 
     <section id="optical_balancing">
         <h4>Optical Balancing</h4>
-    	<p><em>weight of encompassing punctuation around inline Latin text match latin weight, e.g. []()""''«»‹›</em></p>
+        <p>Foreign language words or phrases are regularly found inline within a paragraph of Ethiopic text, often enclosed within
+        encompassing punctuation such as brackets and quotaiton marks (e.g. []()""''«»‹›).  This practice is most often observed in
+        news articles on international topics.  The weight of the encompassing punctuation may found as matching either the Ethiopic
+        Latin weight.  The preference of stakeholders must be determined here.</p>
+        <p>Within the embedded foreign script, the weight of puncutation and other symbol (numbers, etc) should be in keeping with the weight of the foreign weight and
+        not that of the surrounding Ethiopic.</p>
+        <figure>
+          <img src="images/Punctuation-At-Latin-Boundary-Latin-Guillemets.png" alt=" " border="1" />
+          <figcaption>Latin text enclosed with Latin weight guillemets.</figcaption>
+        </figure>
+        <figure>
+          <img src="images/Punctuation-At-Latin-Boundary-Ethiopic-Guillemets.png" alt=" " border="1" />
+          <figcaption>Latin text enclosed with Ethiopic weight guillemets.</figcaption>
+        </figure>
+        <figure>
+          <img src="images/Punctuation-At-Latin-Boundary-Latin-Quotes.png" alt=" " border="1" />
+          <figcaption>Latin text enclosed with Latin weight quotes.</figcaption>
+        </figure>
+        <figure>
+          <img src="images/Punctuation-At-Latin-Boundary-Ethiopic-Quotes.png" alt=" " border="1" />
+          <figcaption>Latin text enclosed with Ethiopic weight quotes.</figcaption>
+        </figure>
+        <p><em>Issues:</em>
+		<ol><em>
+		  <li>What do stakeholders feel should be the default weight for enclosing punctuation?</li>
+		  <li>Would preferences change if Ethiopic wordspace were applied in the samples?</li>
+	    </em></ol>
+	  </p>
     </section>
     
     <section id="ethiopic_wordspace_at_latin_boundaries">
@@ -253,7 +280,7 @@ The shape and weight of these symbols are often changed for a better visual fit 
       	<dl>
           <dt>Always</dt>
           <dd>An Ethiopic word ends with either a wordspace or punctuation. This rule allows a word to split across lines without the need for a hyphenation symbol.
-          Ethiopic wordspace does not precede or follow another punctuation, with the possible exception of a right-side enclosing symbol (brackets and quotation).
+          Ethiopic wordspace does not precede or follow another punctuation, with the possible exception of preceding a right-side enclosing symbol (brackets and quotation).
           </dd>
       	  <dt>Right-Side Enclosing Symbol Convention 1</dt>
       	  <dd>Ethiopic wordspace does not precede but does follow a right-side enclosing symbol. This appears to be the most commonly used convention during imperial times.</dd>
