tweak to the optical balancing section.

--- a/index.html
+++ b/index.html
@@ -244,9 +244,7 @@ The shape and weight of these symbols are often changed for a better visual fit 
         <p>Foreign language words or phrases are regularly found inline within a paragraph of Ethiopic text, often enclosed within
         encompassing punctuation such as brackets and quotaiton marks (e.g. []()""''«»‹›).  This practice is most often observed in
         news articles on international topics.  The weight of the encompassing punctuation may found as matching either the Ethiopic
-        Latin weight.  The preference of stakeholders must be determined here.</p>
-        <p>Within the embedded foreign script, the weight of puncutation and other symbol (numbers, etc) should be in keeping with the weight of the foreign weight and
-        not that of the surrounding Ethiopic.</p>
+        Latin weight.  The preference of stakeholders must be determined here. Comparative samples follow:</p>
         <figure>
           <img src="images/Punctuation-At-Latin-Boundary-Latin-Guillemets.png" alt=" " border="1" />
           <figcaption>Latin text enclosed with Latin weight guillemets.</figcaption>
@@ -263,6 +261,8 @@ The shape and weight of these symbols are often changed for a better visual fit 
           <img src="images/Punctuation-At-Latin-Boundary-Ethiopic-Quotes.png" alt=" " border="1" />
           <figcaption>Latin text enclosed with Ethiopic weight quotes.</figcaption>
         </figure>
+        <p>As a rule within the embedded foreign script, the weight of puncutation and other symbol (numbers, etc) should be in keeping
+           with the weight of the foreign weight and not that of the surrounding Ethiopic.</p>
         <p><em>Issues:</em>
 		<ol><em>
 		  <li>What do stakeholders feel should be the default weight for enclosing punctuation?</li>
