Updates to Ethiopic Wordspace at Latin Boundaries section.

--- a/index.html
+++ b/index.html
@@ -286,11 +286,15 @@ The shape and weight of these symbols are often changed for a better visual fit 
       	  <dd>Ethiopic wordspace does not precede but does follow a right-side enclosing symbol. This appears to be the most commonly used convention during imperial times.</dd>
       	  <dt>Right-Side Enclosing Symbol Convention 2</dt>
       	  <dd>Ethiopic wordspace will precede a right-side enclosing symbol but not follow it. In these cases white space generally appears after
-          the Latin punctuation, this whitespace is however observed as an artifact of justification spacing and does not demonstrate an inserted space symbol. ፍቅር እስከ መቃብር
-          by Haddis Alemayehu is a reference here.</dd>
+          the Latin punctuation, this whitespace is however observed as an artifact of justification spacing and does not demonstrate an inserted space symbol.
+          The figure in this document illustrating <a href="#fig_justification_centered">centered wordspace justification style</a> provides an example of white space
+          after quotation.  ፍቅር እስከ መቃብር by Haddis Alemayehu is also an easily found reference here.
+          </dd>
       	  <dt>Right-Side Enclosing Symbol Convention 3</dt>
           <dd>Ethiopic wordspace does not precede or follow the right-side enclosing symbol -?</dd>
       	</dl>
+        <p><em>[TBD: somewhere in this document mention the mouse text selection rule that a following wordspace should be automatically selected with text, analagous
+               to the rule applied to white space. MS Word does this.]</em></p>
     </section>
     
     <section id="space_wordspace_substitution rules">
