Notes added to the Rules of Applying Whitespace in Ethiopic Text section.

--- a/index.html
+++ b/index.html
@@ -425,6 +425,19 @@ The shape and weight of these symbols are often changed for a better visual fit 
       
      	 <section id="ethiopic_whitespace_rules">	
       		<h4>Rules of Applying Whitespace in Ethiopic Text</h4>
+      		<p><em>The intent of this section is to discuss when white space (and what width) can be added  to documents using Ethiopic wordspace.
+                Examples of when this is found to occur (some of these topics are discussed elsewhere):
+                <ul>
+                  <li>indentation</li>
+                  <li>following a list item marker</li>
+                  <li>within a numeric sequence, like a phone number</li>
+                  <li>within a date format (sometimes, not always)</li>
+                  <li>within a scripture reference (sometimes not always)</li>
+                  <li>before and folowing quotation marks</li>
+                  <li>folowing an elipsis (?)</li>
+                  <li>within a block of embedded foreign script</li>
+                </ul>
+                </em></p>
       		<p><em>[image samples needed]</em></p>
       	</section>
       </section>
